@@ -41,14 +41,13 @@ class QuickEditor {
   include_once('contentVariable.class.inc.php');
 
   global $modx;
-  global $base_path;
   global $qe_path;
   global $QE_lang;
 
   $this->output = '';
 
   $lang = $modx->config['manager_language'];
-  $qe_path = $base_path.'/'.$GLOBALS['quick_edit_path'];
+  $qe_path = MODX_BASE_PATH.$GLOBALS['quick_edit_path'];
   $qe_eng_path = $qe_path.'/lang/english.inc.php';
   $qe_lang_path = $qe_path.'/lang/'.$lang.'.inc.php';
   include_once($qe_eng_path);
