@@ -3,8 +3,10 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MODx 0.9.5 RC2 (rev 1920 - Nov 5, 2006)
+MODx 0.9.5 RC2 (rev 1922 - Nov 6, 2006)
 ====================================
+* Added constants to represent global path variables and make use in places where potential remote file inclusion points exist. (1922)
+* Fixed potential remote file inclusion point in install/instprocessor.php. (1922)
 * [FS#648] Increased character length of zip and state to 25 max to better accomodate non-US locations (1920)
 * [FS#651] Increased character length of menu title and alias field to 255 max (1919)
 * Modified context menu to use prototype vs. WebFX (1918)
